2005-07-18  Sven Panne  <sven.panne@aedion.de>
	* linux/doc/openal.texi, linux/src/al_state.c,
	linux/src/al_state.h: Nuked alHint(), it is not in the 1.1 spec.

2005-07-03  Sven Panne  <sven.panne@aedion.de>
	* linux/Makefile.in: aluttypes.h is dead, Jim...

2005-04-17  Sven Panne  <sven.panne@aedion.de>

	* linux/src/alut/alut_main.c: Don't set an ALC error
	condition. Close the device in alutExit. Don't use a global
	variable for the context, use the current context instead, just
	like the other ALUT implementations.

2005-04-16  Sven Panne  <sven.panne@aedion.de>

	* linux/doc/openal.texi: Updated documentation a bit.

	* include/AL/alc.h, linux/src/alc/alc_context.c: The Linux
	implementation of alcProcessContext and alcDestroyContext follow
	the spec now and return void. Again, this breaks compatibility.

	* include/AL/alc.h: Removed useless #ifdef.

	* include/AL/alc.h, linux/doc/openal.texi,
	linux/src/alc/alc_context.c: The Linux implementation of
	alcMakeContextCurrent follows the spec now and returns an
	ALCboolean, where ALC_TRUE (value 1) means "OK". Formerly it
	returned an ALCenum, where ALC_NO_ERROR (value 0) meant "OK", so
	this change breaks compatibility, but I can't see a way around
	it. It is a total miracle why a value is returned at all, because
	alcMakeContextCurrent sets an ALC error condition in case of a
	failure, anyway, so the right way would be using alcGetError.

	* linux/pb.tar.gz: Removed. It seems to be an ancient leftover for
	MacOS X.

2005-04-11  Sven Panne  <sven.panne@aedion.de>

	* demos/altest/common/altest.cpp, include/AL/altypes.h,
	linux/doc/openal.texi, linux/src/al_able.c, linux/src/al_buffer.c,
	linux/src/al_distance.c, linux/src/al_error.c, linux/src/al_ext.c,
	linux/src/al_ext_iasig.c, linux/src/al_filter.c,
	linux/src/al_listen.c, linux/src/al_mixer.c, linux/src/al_queue.c,
	linux/src/al_source.c, linux/src/al_state.c,
	linux/src/extensions/al_ext_loki.c: Use the official error tokens